--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">3M<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Adhesivos, Cintas, Conectores, Lijas, etc.</a></p>
+                        <p><a>Adhesivos, Cintas, Conectores, Lijas.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">3M<i class="material-icons right ">close</i></span>
@@ -124,7 +124,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Eagle<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Acc Eléctricos, Línea Ferretera Habitacional.</a></p>
+                        <p><a>Línea Ferretera Habitacional.</a><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Eagle<i class="material-icons right ">close</i></span>
@@ -141,7 +141,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Bticino<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Accesorios Eléctricos, Recidenciales/Comerciales.</a></p>
+                        <p><a>Línea Ferretera Habitacional.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Bticino<i class="material-icons right ">close</i></span>
@@ -161,7 +161,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Avtek<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Supresores, Protectores, Reguladores de Voltaje, Fuentes de Poder.</a></p>
+                        <p><a>Supresores, Reguladores de Voltaje.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Avtek<i class="material-icons right ">close</i></span>
@@ -176,7 +176,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Segurimax<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Lámparas de Emergencia.</a><br><br></p>
+                        <p><a>Lámparas de Emergencia.</a><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Segurimax<i class="material-icons right ">close</i></span>
@@ -191,7 +191,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Square D<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Centros de Carga, Breaker, Supresores.</a><br><br></p>
+                        <p><a>Centros de Carga, Breaker.</a><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Square D<i class="material-icons right ">close</i></span>
@@ -210,7 +210,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Conducen<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Conductores Eléctricos, Cobre y Aluminio.</a><br><br></p>
+                        <p><a>Cond. Eléctricos, Cobre y Aluminio.</a><br><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Conducen<i class="material-icons right ">close</i></span>
@@ -225,7 +225,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Coflex<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Productos Sanitarios, Cocina, lavandería, Baños.</a></p>
+                        <p><a>Productos Sanitarios, lavandería, Baños.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Coflex<i class="material-icons right ">close</i></span>
@@ -242,7 +242,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Aqua Nuova<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Inodoros, Lavamanos, Accesorios de Baño, Espejos, Grifería, etc.</a></p>
+                        <p><a>Inodoros, Lavamanos, Acc de Baño, Espejos.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Aqua Nuova<i class="material-icons right ">close</i></span>
@@ -260,7 +260,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Bruder<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Inodoro, Lavamanos, Accesorios para Inodoro.</a><br><br></p>
+                        <p><a>Inodoro, Lavamanos, Accesorios para Inodoro.</a><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Bruder<i class="material-icons right ">close</i></span>
@@ -276,7 +276,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Cato<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Inodoros, Lavamanos.</a><br><br><br></p>
+                        <p><a>Inodoros, Lavamanos.</a><br><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Cato<i class="material-icons right ">close</i></span>
@@ -291,7 +291,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Fermetal<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Fregaderos, Grifería, Accesorios para Baño y Fontanería.</a></p>
+                        <p><a>Fregaderos, Grifería, Accesorios para Baño.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Fermetal<i class="material-icons right ">close</i></span>
@@ -354,7 +354,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Roma<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Brochas, Felpas, Marcos.</a><br><br><br></p>
+                        <p><a>Brochas, Felpas, Marcos.</a><br><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Roma<i class="material-icons right ">close</i></span>
@@ -369,7 +369,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Suplijardines<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Semillas, Abonos, Acc Jardinería, Atomizadores.</a><br><br><br></p>
+                        <p><a>Semillas, Abonos, Acc Jardinería, Atomizadores.</a><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Suplijardines<i class="material-icons right ">close</i></span>
@@ -384,7 +384,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Imacasa<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Herramienta Agrícola y Jardinería.</a><br><br><br></p>
+                        <p><a>Herramienta Agrícola y Jardinería.</a><br><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Imacasa<i class="material-icons right ">close</i></span>
@@ -415,7 +415,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">stanley<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Herramienta Manual.</a><br><br><br><br></p>
+                        <p><a>Herramienta Manual.</a><br><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Stanley<i class="material-icons right ">close</i></span>
@@ -472,7 +472,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Maute<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Inversores, mascaras de soldar, Compresores, Bombas de Agua.</a><br><br></p>
+                        <p><a>Inversores, mascaras de soldar, Compresores, Bombas de Agua.</a><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Maute<i class="material-icons right ">close</i></span>
@@ -490,7 +490,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Sur Química<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Morteros, Pintura, Adhesivos, Automotriz.</a><br><br></p>
+                        <p><a>Morteros, Pintura, Adhesivos, Automotriz.</a><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Sur Química<i class="material-icons right ">close</i></span>
@@ -508,7 +508,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Fanal<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Cerraduras, Candados.</a></p>
+                        <p><a>Cerraduras, Candados.</a><br><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Fanal<i class="material-icons right ">close</i></span>
@@ -523,7 +523,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Werner<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Escaleras.</a></p>
+                        <p><a>Escaleras.</a><br><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Werner<i class="material-icons right ">close</i></span>
@@ -538,7 +538,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Vacmaster<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Aspiradoras y Accesorios.</a></p>
+                        <p><a>Aspiradoras y Accesorios.</a><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Vacmaster<i class="material-icons right ">close</i></span>
@@ -553,7 +553,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Baterías Voniko<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Baterías.</a></p>
+                        <p><a>Baterías.</a><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Voniko<i class="material-icons right ">close</i></span>
@@ -568,7 +568,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Eterna<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Escobas, Cepillos, Escobones.</a><br><br></p>
+                        <p><a>Escobas, Cepillos, Escobones.</a><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Eterna<i class="material-icons right ">close</i></span>
@@ -583,7 +583,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Rimax<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Armarios, Organización, Basureros, Casas para Mascotas.</a></p>
+                        <p><a>Armarios, Organización, Basureros.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Rimax<i class="material-icons right ">close</i></span>
@@ -648,7 +648,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Bicicletas Rali<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Bicicletas, Repuestos y Accesorios.</a></p>
+                        <p><a>Bicicletas, Repuestos y Accesorios.</a><br><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Bicicletas Rali<i class="material-icons right ">close</i></span>
@@ -664,7 +664,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Meguiars<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Cuidado Automotriz.</a><br><br><br></p>
+                        <p><a>Cuidado Automotriz.</a><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Meguiars<i class="material-icons right ">close</i></span>
@@ -680,7 +680,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Repsol<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Lubricantes, Desengrasantes, Coolant.</a><br><br></p>
+                        <p><a>Lubricantes, Desengrasantes.</a><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Repsol<i class="material-icons right ">close</i></span>
@@ -695,7 +695,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Flexi Space<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Puertas Plegables, Aleros.</a><br><br></p>
+                        <p><a>Puertas Plegables, Aleros.</a><br></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Flexi Space<i class="material-icons right ">close</i></span>
@@ -710,6 +710,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Otros Catálogos<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Otros Catálogos.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Otros Catálogos<i class="material-icons right ">close</i></span>
