--- a/index.html
+++ b/index.html
@@ -64,6 +64,22 @@
             <div class="col s12 m8 offset-m2 l4 xl3 ">
                 <div class="card ">
                     <div class="card-image waves-effect waves-block waves-light ">
+                        <img class="activator " width="150px " height="150px " src="img_catalogo/MIBRO.png ">
+                    </div>
+                    <div class="card-content ">
+                        <span class="card-title activator grey-text text-darken-4 ">Cuerdas Mibro<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Cuerdas Fibra Sintética, Fibra Natural.</a></p>
+                    </div>
+                    <div class="card-reveal ">
+                        <span class="card-title grey-text text-darken-4 ">Mibro<i class="material-icons right ">close</i></span>
+                        <li><a class="flow-text" href="https://drive.google.com/file/d/1XGWVFWtMBoEaaDNtNXOVuU8gnn54jUyz/view?usp=sharing"> Catálogo Mibro Resumido</a></li><br>
+                        <li><a class="flow-text" href="https://drive.google.com/file/d/1lGgTAnORwLwStv9MvQnJpqdy8wvzjobA/view?usp=sharing"> Catálogo Mibro Ficha Técnica</a></li>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m8 offset-m2 l4 xl3 ">
+                <div class="card ">
+                    <div class="card-image waves-effect waves-block waves-light ">
                         <img class="activator " width="150px " height="150px " src="img_catalogo/lorenzetti.jpg ">
                     </div>
                     <div class="card-content ">
