--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Promociones<i class="material-icons right ">close</i></span>
-                        <li><a class="flow-text" class="flow-text" href="https://drive.google.com/file/d/1w_yudnPNl-iBTsjxeu8-wQr2a3FizdJ-/view?usp=sharing"> Promociones Mensuales</a></li>
+                        <li><a class="flow-text" class="flow-text" href="https://drive.google.com/file/d/1ZAomrgF790Utro34jhXNZ9sgAYUeP81T/view?usp=share_link"> Promociones Mensuales</a></li>
                     </div>
                 </div>
             </div>
