--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Lorenzetti<i class="material-icons right ">close</i></span>
-                        <li><a class="flow-text" href="https://drive.google.com/file/d/1CZ4If8HMIJfDv8H9IM7eaASVGDLEGn3k/view?usp=sharing">Catálogo y Fichas tecnicas</a></li><br>
+                        <li><a class="flow-text" href="https://drive.google.com/file/d/1CZ4If8HMIJfDv8H9IM7eaASVGDLEGn3k/view?usp=sharing">Catálogo y Fichas Técnicas</a></li><br>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/1BTrTPzp0dug1UWd3m5xzpFOVFoIWa-Kn/view?usp=sharing ">Catálogo Lorenzetti</a></li><br>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/1-AsUHcZ9OvKLJWl7YSPv8bwn-TJBFbVB/view?usp=sharing ">Orinal Lorenzetti</a></li><br>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/1LfcTxXWRMDFYc4rEHjuB6Tq9VtK9LDPf/view?usp=sharing ">Accesorios de Baño</a></li><br>
