--- a/index.html
+++ b/index.html
@@ -239,6 +239,23 @@
             <div class="col s12 m8 offset-m2 l4 xl3 ">
                 <div class="card ">
                     <div class="card-image waves-effect waves-block waves-light ">
+                        <img class="activator " width="150px " height="150px " src="img_catalogo/Puertas Skin.jpg ">
+                    </div>
+                    <div class="card-content ">
+                        <span class="card-title activator grey-text text-darken-4 ">Puertas Skin<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Puertas dos, cuatro y seis tableros.</a></p>
+                        <p><a>.</a></p>
+                    </div>
+                    <div class="card-reveal ">
+                        <span class="card-title grey-text text-darken-4 ">Coflex<i class="material-icons right ">close</i></span>
+                        <li><a class="flow-text" href="https://drive.google.com/file/d/1rBYokwcwQ8f5la3Eflmm2qQRSH95ZbyX/view?usp=sharing"> Catálogo Puertas</a></li><br>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col s12 m8 offset-m2 l4 xl3 ">
+                <div class="card ">
+                    <div class="card-image waves-effect waves-block waves-light ">
                         <img class="activator " width="150px " height="150px " src="img_catalogo/aqua.jpg ">
                     </div>
                     <div class="card-content ">
