--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                         <p><a>.</a></p>
                     </div>
                     <div class="card-reveal ">
-                        <span class="card-title grey-text text-darken-4 ">Coflex<i class="material-icons right ">close</i></span>
+                        <span class="card-title grey-text text-darken-4 ">Puertas Skin<i class="material-icons right ">close</i></span>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/1rBYokwcwQ8f5la3Eflmm2qQRSH95ZbyX/view?usp=sharing"> Catálogo Puertas</a></li><br>
                     </div>
 
