--- a/index.html
+++ b/index.html
@@ -239,12 +239,11 @@
             <div class="col s12 m8 offset-m2 l4 xl3 ">
                 <div class="card ">
                     <div class="card-image waves-effect waves-block waves-light ">
-                        <img class="activator " width="150px " height="150px " src="img_catalogo/Puertas Skin.jpg ">
+                        <img class="activator " width="150px " height="150px " src="img_catalogo/Puertas.jpg ">
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Puertas Skin<i class="material-icons right ">more_vert</i></span>
                         <p><a>Puertas dos, cuatro y seis tableros.</a></p>
-                        <p><a>.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Puertas Skin<i class="material-icons right ">close</i></span>
