--- a/index.html
+++ b/index.html
@@ -233,13 +233,12 @@
                         <li><a class="flow-text" href="https://drive.google.com/file/d/19aDfSzyKmzw1rpolMUaIV89RHyYHR77m/view?usp=sharing "> Catálogo Coflex</a></li><br>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/1GaI1qx1euX6RDT4cGx63Frry8wdB4nDO/view?usp=sharing "> Catálogo Unión de Reparación</a></li>
                     </div>
-
                 </div>
             </div>
             <div class="col s12 m8 offset-m2 l4 xl3 ">
                 <div class="card ">
                     <div class="card-image waves-effect waves-block waves-light ">
-                        <img class="activator " width="150px " height="150px " src="img_catalogo/puertas.jpg">
+                        <img class="activator " width="150px " height="150px " src="img_catalogo/puertas.png">
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Puertas Skin<i class="material-icons right ">more_vert</i></span>
