--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                         <li><a class="flow-text" href="https://drive.google.com/file/d/18TPhXqpMgrvORWYGp6XpZPQZLDExvCWz/view?usp=sharing"> Surtido Skil Marzo</a></li><br>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/115p_NnTUlO6LEtZ0jBt7sBgUFLwa2FK5/view?usp=sharing "> Catálogo Medidores Laser Bosch</a></li><br>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/11-zFjoG_9UIcLEmo-1A60vno13IPcGHo/view?usp=sharing "> Catálogo Accesorios Bosch</a></li><br>
-                        <li><a class="flow-text" href="https://drive.google.com/file/d/1ZIra3pTIKlVOyS0EupgOPW_YQQSdNT1C/view?usp=sharing "> Catálogo Brocas Completo</a></li><br>
+                        <li><a class="flow-text" href="https://docs.google.com/spreadsheets/d/1GIv1iWUnWF8qEooR_L-OAsG1eNV4SlVR/edit?usp=sharing&ouid=113384610071986709123&rtpof=true&sd=true "> Catálogo Accesorios Bosch EXCEL</a></li><br>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/12TW0Tr__5jmfKSVrMV4dEzcr7v28u-p4/view?usp=sharing "> Catálogo HE Skil</a></li><br>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/1D0nlbISPb80Qgswio5MGqsQM4Irwxoyx/view?usp=sharing "> Catalogo Fresas Router Completo</a></li><br>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/1Zz-J2VFAGjpFQB0SB1skA4Dfhf9iIFV8/view?usp=sharing "> Catálogo Fresas Router Reducido</a></li>
@@ -550,15 +550,15 @@
             <div class="col s12 m8 offset-m2 l4 xl3 ">
                 <div class="card ">
                     <div class="card-image waves-effect waves-block waves-light ">
-                        <img class="activator " width="150px " height="150px " src="img_catalogo/werner.jpg ">
+                        <img class="activator " width="150px " height="150px " src="img_catalogo/cuprum.jpeg ">
                     </div>
                     <div class="card-content ">
-                        <span class="card-title activator grey-text text-darken-4 ">Werner<i class="material-icons right ">more_vert</i></span>
+                        <span class="card-title activator grey-text text-darken-4 ">Cuprum<i class="material-icons right ">more_vert</i></span>
                         <p><a>Escaleras.</a><br><br></p>
                     </div>
                     <div class="card-reveal ">
-                        <span class="card-title grey-text text-darken-4 ">Werner<i class="material-icons right ">close</i></span>
-                        <li><a class="flow-text" href="https://drive.google.com/file/d/1qxs-8SPnjoiQpQB-0bXIl2jXXH9Q5bw3/view?usp=sharing "> Catálogo Escaleras</a></li>
+                        <span class="card-title grey-text text-darken-4 ">Cuprum<i class="material-icons right ">close</i></span>
+                        <li><a class="flow-text" href="https://drive.google.com/file/d/16gCUXT4up1ZdxoLQaeEzHP5n9TaWMH2C/view?usp=sharing"> Catálogo Escaleras</a></li>
                     </div>
                 </div>
             </div>
@@ -744,6 +744,7 @@
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Otros Catálogos<i class="material-icons right ">close</i></span>
+                        <li><a class="flow-text" href="https://drive.google.com/file/d/1iLfipla4Ft6Bh1EnzuHDnyOVXBdtVNZq/view?usp=sharing ">Varias marcas Bazar y Hogar</a></li><br>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/1QU_9or59V8CqNzzsYvDIcSkkOEXsvMSh/view?usp=sharing ">Cilindro de Gas</a></li><br>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/1WMfifI57vlWDN-LzKBQz7UYbUFAYPbeM/view?usp=sharing "> Cocina Portatil Gas</a></li><br>
                         <li><a class="flow-text" href="https://drive.google.com/file/d/1nLOLS6rjJpdepfyZDMs28EdYpoejWNyG/view?usp=sharing ">Hidrolavadora Caprino</a></li><br>
