--- a/index.html
+++ b/index.html
@@ -63,6 +63,21 @@
             <div class="col s12 m8 offset-m2 l4 xl3 ">
                 <div class="card ">
                     <div class="card-image waves-effect waves-block waves-light ">
+                        <img class="activator " width="150px " height="150px " src="img_catalogo/bambary.png ">
+                    </div>
+                    <div class="card-content ">
+                        <span class="card-title activator grey-text text-darken-4 ">Bambary<i class="material-icons right ">more_vert</i></span>
+                        <p><a>Manualidades, Escolar, Adhesivos, Decorativos.</a></p>
+                    </div>
+                    <div class="card-reveal ">
+                        <span class="card-title grey-text text-darken-4 ">Mibro<i class="material-icons right ">close</i></span>
+                        <li><a class="flow-text" href="https://drive.google.com/file/d/1M9dS3jb0hxyOXio54IwO5AjMG-_RMiMW/view?usp=sharing"> Catálogo General</a></li><br>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m8 offset-m2 l4 xl3 ">
+                <div class="card ">
+                    <div class="card-image waves-effect waves-block waves-light ">
                         <img class="activator " width="150px " height="150px " src="img_catalogo/MIBRO.png ">
                     </div>
                     <div class="card-content ">
