--- a/index.html
+++ b/index.html
@@ -771,33 +771,28 @@
             </div>
         </div>
     </div>
-    <!-- Modal Trigger -->
-    <a class="waves-effect waves-light btn-floating btn-large red modal-trigger" href="#modal1"><i class="large material-icons">add</i></button></a>
+      <!-- Modal Trigger -->
+  <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
 
-    <!-- Modal Structure -->
-    <div id="modal1" class="modal">
-        <div class="modal-content center"> 
-            <div class="col s12 m7">
-                <h2 class="header">Material para RRHH</h2>
-                <div class="card horizontal">
-                  <div class="card-image">
-                    <img src="img_catalogo/bosch.png">
-                  </div>
-                  <div class="card-stacked">
-                    <div class="card-content">
-                      <p>Banco de imagenes Bosch - Skil - Dremel.</p>
-                    </div>
-                    <div class="card-action">
-                      <a href="https://www.boschimages.com">https://www.boschimages.com</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
+  <!-- Modal Structure -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4>RRHH</h4>
+      <div class="row">
+        <div class="col s12 m6">
+          <div class="card blue-grey darken-1">
+            <div class="card-content white-text">
+              <span class="card-title">Banco imagenes Bosch - Skil - Dremel.</span>
+            </div>
+            <div class="card-action">
+              <a href="https://www.boschimages.com">BOSCH</a>
+            </div>
+          </div>
         </div>
-        <div class="modal-footer">
-            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cerrar</a>
-        </div>
+      </div>
     </div>
+  </div>
+  
     <footer class="grey darken-4">
         <div class="font white">
             <p> © 2022 Juan C. Mena </p>
