--- a/index.html
+++ b/index.html
@@ -777,12 +777,12 @@
   <!-- Modal Structure -->
   <div id="modal1" class="modal">
     <div class="modal-content">
-      <h4>RRHH</h4>
+      <h4>material Redes Sociales</h4>
       <div class="row">
         <div class="col s12 m6">
           <div class="card blue-grey darken-1">
             <div class="card-content white-text">
-              <span class="card-title">Banco imagenes Bosch - Skil - Dremel.</span>
+              <span class="card-title">Bosch-Skil-Dremel.</span>
             </div>
             <div class="card-action">
               <a href="https://www.boschimages.com">BOSCH</a>
@@ -792,7 +792,7 @@
       </div>
     </div>
   </div>
-  
+
     <footer class="grey darken-4">
         <div class="font white">
             <p> © 2022 Juan C. Mena </p>
