--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
         </div>
     </div>
       <!-- Modal Trigger -->
-  <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
+  <a class="waves-effect waves-light btn modal-trigger" href="#modal1">RRHH</a>
 
   <!-- Modal Structure -->
   <div id="modal1" class="modal">
