--- a/index.html
+++ b/index.html
@@ -777,12 +777,12 @@
   <!-- Modal Structure -->
   <div id="modal1" class="modal">
     <div class="modal-content">
-      <h4>material Redes Sociales</h4>
+      <h5>Material Redes Sociales</h5>
       <div class="row">
         <div class="col s12 m6">
           <div class="card blue-grey darken-1">
             <div class="card-content white-text">
-              <span class="card-title">Bosch-Skil-Dremel.</span>
+              <span class="card-title"><h6>Bosch-Skil-Dremel.</h6></span>
             </div>
             <div class="card-action">
               <a href="https://www.boschimages.com">BOSCH</a>
