--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
               <span class="card-title"><h6>Bosch-Skil-Dremel.</h6></span>
             </div>
             <div class="card-action">
-              <a href="https://www.boschimages.com">BOSCH</a>
+              <a href="https://www.boschimages.com">BOSCH.COM</a>
             </div>
           </div>
         </div>
