--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
       <h5>Material Redes Sociales</h5>
       <div class="row">
         <div class="col s12 m6">
-          <div class="card blue-grey darken-1">
+          <div class="card  light-blue darken-4">
             <div class="card-content white-text">
               <span class="card-title"><h6>Bosch-Skil-Dremel.</h6></span>
             </div>
