--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
         </div>
     </div>
       <!-- Modal Trigger -->
-  <a class="waves-effect waves-light btn modal-trigger" href="#modal1">RRHH</a>
+  <a class="waves-effect waves-light btn modal-trigger red darken-3" href="#modal1">RRSS</a>
 
   <!-- Modal Structure -->
   <div id="modal1" class="modal">
@@ -786,6 +786,18 @@
             </div>
             <div class="card-action">
               <a href="https://www.boschimages.com">BOSCH.COM</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12 m6">
+          <div class="card  red darken-3">
+            <div class="card-content white-text">
+              <span class="card-title"><h6>Lorenzetti.</h6></span>
+            </div>
+            <div class="card-action">
+              <a href="https://drive.google.com/drive/folders/1e3XSFN8f66onAwfiF18LyQiX4gdal5AD?usp=sharing">LORENZETTI</a>
             </div>
           </div>
         </div>
