--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                         <img class="activator " width="150px " height="150px " src="img_catalogo/imacasa.png ">
                     </div>
                     <div class="card-content ">
-                        <span class="card-title activator grey-text text-darken-4 ">Imacasa<i class="material-icons right ">more_vert</i></span>
+                        <span class="card-title activator grey-text text-darken-4 " >Imacasa<i class="material-icons right ">more_vert</i></span>
                         <p><a>Herramienta Agrícola y Jardinería.</a><br><br></p>
                     </div>
                     <div class="card-reveal ">
@@ -749,7 +749,7 @@
                 </div>
             </div>
             <div class="col s12 m8 offset-m2 l4 xl3">
-                <div class="card ">
+                <div class="card " height="200px">
                     <div class="card-image waves-effect waves-block waves-light ">
                         <img class="activator " width="150px " height="150px " src="img_catalogo/otros.png ">
                     </div>
@@ -776,6 +776,13 @@
 
   <!-- Modal Structure -->
   <div id="modal1" class="modal"> <div class="row">
+    <div class="col s12 m6">
+        <div class="card  light-blue darken-3">
+          <div class="card-action ">
+            <a href="http://consulta.cofersa.cr/">CONSULTA PEDIDOS</a>
+          </div>
+        </div>
+      </div>
     <div class="col s12 m6">
       <div class="card  light-blue darken-1">
         <div class="card-action ">
