--- a/index.html
+++ b/index.html
@@ -777,12 +777,19 @@
   <!-- Modal Structure -->
   <div id="modal1" class="modal"> <div class="row">
     <div class="col s12 m6">
+        <div class="card  purple darken-4">
+          <div class="card-action ">
+            <a href="https://reportesbi.mayoreo.biz/login">Reportes OIC</a>
+          </div>
+        </div>
+    </div>
+    <div class="col s12 m6">
         <div class="card  light-blue darken-3">
           <div class="card-action ">
             <a href="http://consulta.cofersa.cr/">CONSULTA PEDIDOS</a>
           </div>
         </div>
-      </div>
+    </div>
     <div class="col s12 m6">
       <div class="card  light-blue darken-1">
         <div class="card-action ">
