--- a/index.html
+++ b/index.html
@@ -858,7 +858,7 @@
 
     <footer class="grey darken-4">
         <div class="font white">
-            <p> © 2022 Juan C. Mena </p>
+            <p> © 2023 STA Juan C. Mena </p>
         </div>
     </footer>
 
