--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <header>
     <div class="navbar-fixed">
         <nav>
-            <div class=" nav-wrapper  grey darken-4">
+            <div class=" nav-wrapper light-blue darken-4">
                 <a class="brand-logo center ">COFERSA</a>
             </div>
         </nav>
@@ -857,8 +857,8 @@
 -->
 
 
-    <footer class="grey darken-4">
-        <div class="font white">
+    <footer class=" light-blue darken-1">
+        <div class="font white ">
             <p> © 2023 STA Juan C. Mena </p>
         </div>
     </footer>
