--- a/index.html
+++ b/index.html
@@ -859,7 +859,7 @@
 
     <footer class=" light-blue darken-1">
         <div class="font white ">
-            <p> © 2023 STA Juan C. Mena </p>
+            <p> 2023 © STA Juan C. Mena </p>
         </div>
     </footer>
 
