--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                     </div>
                     <div class="card-content ">
                         <span class="card-title activator grey-text text-darken-4 ">Coflex<i class="material-icons right ">more_vert</i></span>
-                        <p><a>Productos Sanitarios, lavandería, Baños.</a></p>
+                        <p><a>Productos Sanitarios, Lavandería, Baños.</a></p>
                     </div>
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Coflex<i class="material-icons right ">close</i></span>
