--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
             <button center id="reporte" class="waves-effect waves-light btn-small"><i class="material-icons left">cloud</i>Reportes</button>
             <div class="row" id="report1" hidden>
                 <div class="col s12 m6">
-                    <div class="card  purple darken-4">
+                    <div class="card  deep-purple lighten-1">
                         <div class="card-action ">
                             <a href="https://reportesbi.mayoreo.biz/login">Reportes OIC</a>
                         </div>
                     </div>
                 </div>
                 <div class="col s12 m6">
-                    <div class="card  light-blue darken-3">
+                    <div class="card   teal lighten-1">
                         <div class="card-action ">
                             <a href="http://consulta.cofersa.cr/">CONSULTA PEDIDOS</a>
                         </div>
