--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 
         <!-- Modal Structure -->
         <div id="modal1" class="modal">
-            <button center id="reporte" class="waves-effect waves-light btn-small"><i class="material-icons left">cloud</i>Reportes</button>
+            <button id="reporte" class="waves-effect waves-light btn-small"><i class="material-icons left">cloud</i>Reportes</button>
             <div class="row" id="report1" hidden>
                 <div class="col s12 m6">
-                    <div class="card    teal lighten-2">
+                    <div class="card  grey darken-3">
                         <div class="card-action ">
                             <a href="https://reportesbi.mayoreo.biz/login">Reportes OIC</a>
                         </div>
                     </div>
                 </div>
                 <div class="col s12 m6">
-                    <div class="card   teal lighten-1">
+                    <div class="card grey darken-3">
                         <div class="card-action ">
                             <a href="http://consulta.cofersa.cr/">CONSULTA PEDIDOS</a>
                         </div>
@@ -1187,6 +1187,7 @@
     <!--JavaScript at end of body for optimized loading-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js "></script>
     <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="json/pswrd.json"></script>
 
 </body>
 
