--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 
         <!-- Modal Structure -->
         <div id="modal1" class="modal">
-            <button id="reporte" class="waves-effect waves-light btn-small"><i class="material-icons left">cloud</i>Reportes</button>
+            <button id="reporte" class="waves-effect waves-light btn-small"><i
+                    class="material-icons left">cloud</i>Reportes</button>
             <div class="row" id="report1" hidden>
                 <div class="col s12 m6">
                     <div class="card  grey darken-3">
@@ -45,49 +46,51 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col s12 m6">
+                    <div class="card  light-blue darken-1">
+                        <div class="card-action ">
+                            <a
+                                href="https://drive.google.com/file/d/1POTsBmf7VMKQM6QaOtb63tn-2ckizeBj/view?usp=sharing">Cuentas
+                                Bancos</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-content">
+                <h5>Material Redes Sociales</h5>
                 <div class="row">
                     <div class="col s12 m6">
-                        <div class="card  light-blue darken-1">
-                            <div class="card-action ">
-                                <a href="https://drive.google.com/file/d/1POTsBmf7VMKQM6QaOtb63tn-2ckizeBj/view?usp=sharing">Cuentas Bancos</a>
+                        <div class="card  light-blue darken-4">
+                            <div class="card-content white-text">
+                                <span class="card-title">
+                                    <h6>Bosch-Skil-Dremel.</h6>
+                                </span>
+                            </div>
+                            <div class="card-action">
+                                <a href="https://www.boschimages.com">BOSCH.COM</a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="modal-content">
-                    <h5>Material Redes Sociales</h5>
-                    <div class="row">
-                        <div class="col s12 m6">
-                            <div class="card  light-blue darken-4">
-                                <div class="card-content white-text">
-                                    <span class="card-title">
-                                        <h6>Bosch-Skil-Dremel.</h6>
-                                    </span>
-                                </div>
-                                <div class="card-action">
-                                    <a href="https://www.boschimages.com">BOSCH.COM</a>
-                                </div>
+                <div class="row">
+                    <div class="col s12 m6">
+                        <div class="card  red darken-3">
+                            <div class="card-content white-text">
+                                <span class="card-title">
+                                    <h6>Lorenzetti.</h6>
+                                </span>
                             </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col s12 m6">
-                            <div class="card  red darken-3">
-                                <div class="card-content white-text">
-                                    <span class="card-title">
-                                        <h6>Lorenzetti.</h6>
-                                    </span>
-                                </div>
-                                <div class="card-action">
-                                    <a
-                                        href="https://drive.google.com/drive/folders/1e3XSFN8f66onAwfiF18LyQiX4gdal5AD?usp=sharing">LORENZETTI</a>
-                                </div>
+                            <div class="card-action">
+                                <a
+                                    href="https://drive.google.com/drive/folders/1e3XSFN8f66onAwfiF18LyQiX4gdal5AD?usp=sharing">LORENZETTI</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 </header>
 
 <body>
@@ -712,10 +715,10 @@
                                 Catálogo Stanley</a></li><br>
                         <li><a class="flow-text"
                                 href="https://drive.google.com/file/d/1fxMC5bxe2dAsKougf2q6xmuIb3j2n2LE/view?usp=sharing ">
-                                Catálogo Candados</a></li>
+                                Catálogo Candados</a></li><br>
                         <li><a class="flow-text"
-                                href="https://drive.google.com/file/d/1lHRLsmGLPNnF6doZhpFG5h5YRm3UI9B3/view?usp=sharing ">
-                                Catálogo National</a></li>
+                                href="https://docs.google.com/spreadsheets/d/19y-ORW-8DaVTCm1kkDYvQGhMEModYWuH/edit?usp=sharing&ouid=113384610071986709123&rtpof=true&sd=true">
+                                Accesorios National</a></li>
                     </div>
 
                 </div>
