--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
         <!-- Modal Structure -->
         <div id="modal1" class="modal">
-            <button id="reporte" class="waves-effect waves-light btn-small"><i
-                    class="material-icons left">cloud</i>Reportes</button>
+            <button id="miBoton" class="waves-effect waves-light btn-small" onclick="solicitarContrasena()"><i
+                class="material-icons left">cloud</i>Reportes</button>
             <div class="row" id="report1" hidden>
                 <div class="col s12 m6">
                     <div class="card  grey darken-3">
