--- a/index.html
+++ b/index.html
@@ -28,15 +28,8 @@
 
         <!-- Modal Structure -->
         <div id="modal1" class="modal">
-            <button id="miBoton"  onclick="solicitarContrasena()"><i
-                class="material-icons left" class="waves-effect waves-light btn-small">cloud</i>Reportes</button>
-            <div id="formContrasena" style="display:none">
-                <form>
-                    <label for="contrasena">Ingrese la contraseña:</label>
-                    <input type="password" id="contrasena">
-                    <input type="button" value="Aceptar" onclick="verificarContrasena()">
-                </form>
-            </div>
+            <button id="miBoton" class="waves-effect waves-light btn-small" onclick="solicitarContrasena()"><i
+                class="material-icons left">cloud</i>Reportes</button>
             <div class="row" id="report1" hidden>
                 <div class="col s12 m6">
                     <div class="card  grey darken-3">
