--- a/index.html
+++ b/index.html
@@ -21,7 +21,16 @@
             <div class=" nav-wrapper light-blue darken-4">
                 <a class="brand-logo center ">COFERSA</a>
             </div>
+           
         </nav>
+        <!-- modo oscuro -->
+        <div class="switch">
+            <label>
+                <input type="checkbox" id="dark-mode-toggle">
+                <span class="lever"></span>
+              
+            </label>
+        </div>
         <!-- Modal Trigger -->
         <a class="waves-effect waves-light btn modal-trigger red darken-1 " href="#modal1"><i
                 class="material-icons">menu</i></a>
@@ -29,7 +38,7 @@
         <!-- Modal Structure -->
         <div id="modal1" class="modal">
             <button id="miBoton" class="waves-effect waves-light btn-small" onclick="solicitarContrasena()"><i
-                class="material-icons left">cloud</i>Reportes</button>
+                    class="material-icons left">cloud</i>Reportes</button>
             <div class="row" id="report1" hidden>
                 <div class="col s12 m6">
                     <div class="card  grey darken-3">
@@ -91,6 +100,7 @@
             </div>
         </div>
     </div>
+
 </header>
 
 <body>
@@ -1188,10 +1198,10 @@
 
 
     <!--JavaScript at end of body for optimized loading-->
+    <!-- Importar la biblioteca jQuery -->
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js "></script>
     <script type="text/javascript" src="js/index.js"></script>
-    <script type="text/javascript" src="json/pswrd.json"></script>
-
 </body>
 
 </html>
