--- a/index.html
+++ b/index.html
@@ -421,6 +421,9 @@
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Coflex<i
                                 class="material-icons right ">close</i></span>
+                                <li><a class="flow-text"
+                                    href="https://drive.google.com/file/d/12Wec7JyLs54OUGBTHTvdJHHawGD4EUM0/view?usp=sharing">
+                                    Productos nuevos Coflex</a></li><br>
                         <li><a class="flow-text"
                                 href="https://drive.google.com/file/d/19aDfSzyKmzw1rpolMUaIV89RHyYHR77m/view?usp=sharing ">
                                 Catálogo Coflex</a></li><br>
