--- a/index.html
+++ b/index.html
@@ -1191,10 +1191,8 @@
 -->
 
 
-    <footer class=" light-blue darken-1">
-        <div class="font white ">
-            <p> 2023 © STA Juan C. Mena </p>
-        </div>
+    <footer class=" blue-grey lighten-5">
+            <p > 2023 © STA Juan C. Mena </p>
     </footer>
 
 
