--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         <div id="modal1" class="modal">
             <button id="miBoton" class="waves-effect waves-light btn-small" onclick="solicitarContrasena()"><i
                     class="material-icons left">cloud</i>Reportes</button>
-            <div class="row" id="report1" hidden>
+            <div class="row" id="report1" hidden >
                 <div class="col s12 m6">
                     <div class="card  grey darken-3">
-                        <div class="card-action ">
+                        <div class="card-action p">
                             <a href="https://reportesbi.mayoreo.biz/login">Reportes OIC</a>
                         </div>
                     </div>
@@ -1191,7 +1191,7 @@
 -->
 
 
-    <footer class=" blue-grey lighten-5">
+    <footer class=" blue-grey lighten-5 ">
             <p > 2023 © STA Juan C. Mena </p>
     </footer>
 
