--- a/index.html
+++ b/index.html
@@ -134,12 +134,16 @@
                     <div class="card-reveal ">
                         <span class="card-title grey-text text-darken-4 ">Producto Nuevo<i
                                 class="material-icons right ">close</i></span>
+                                <li><a class="flow-text"
+                                    href="https://drive.google.com/file/d/1N-DXlUMmDZSJCwLxp4CVvEEiX96qGX_C/view?usp=sharing">Botas de PVC</a></li><br>
+                                    <li><a class="flow-text"
+                                        href="https://drive.google.com/file/d/1I1lQYP2NBRs3N6tj93S7CcUPnJxjLR4X/view?usp=sharing">Mecha/Plastico negro</a></li><br>
                         <li><a class="flow-text"
                                 href="https://drive.google.com/file/d/1zuy-aIF3sYG_tjVh8gHvpjJ02prS63re/view?usp=sharing">Cintas
-                                Knight</a></li>
+                                Knight</a></li><br>
                         <li><a class="flow-text"
                                 href="https://drive.google.com/file/d/1kxE1p9tTQ34oYJB0Te5uOk9h21LDe59p/view?usp=sharing">Encendedores</a>
-                        </li>
+                        </li><br>
                         <li><a class="flow-text"
                                 href="https://drive.google.com/file/d/1jO6NSh_o8o1FKLE3elxuNFTu0ULdaraH/view?usp=sharing">Ratoneras</a>
                         </li>
