--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
                         <span class="card-title grey-text text-darken-4 ">Producto Nuevo<i
                                 class="material-icons right ">close</i></span>
                                 <li><a class="flow-text"
+                                    href="https://drive.google.com/file/d/1Uc3OO4hfd97WsGNUjD3h8zL9cJwDV_hc/view?usp=sharing">Cajas de Pino</a></li><br>
+                                <li><a class="flow-text"
                                     href="https://drive.google.com/file/d/1N-DXlUMmDZSJCwLxp4CVvEEiX96qGX_C/view?usp=sharing">Botas de PVC</a></li><br>
                                     <li><a class="flow-text"
                                         href="https://drive.google.com/file/d/1I1lQYP2NBRs3N6tj93S7CcUPnJxjLR4X/view?usp=sharing">Mecha/Plastico negro</a></li><br>
