--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>COFERSA</title>
-    <link rel="shortcut icon" href="logos/logo.ico" type="image/x-icon">
+    <link rel="icon" href="logos/logo.ico" type="image/ico">
     <link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 <header>
